# crypto_trader

./: MANIFEST.in  README.md  all_prices.py  btc_price_predictor.py  crypto_evaluator.py  crypto_ids.json  crypto_read.py  crypto_read_alternativ.py  crypto_trader.py  key_manager.py  machinelearning.py  main.py  price_fetcher.py  pyproject.toml  test.py  trading.py
.github/workflows/: package.yml
crypto_viewer/: __init__.py  btc_price_predictor.py  crypto_evaluator.py  crypto_read.py  crypto_read_alternativ.py
src/: __init__.py  btc_price_predictor.py  crypto_read.py
