[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_viewer"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name = "Your Name", email = "your_email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }


dependencies = [
    "requests",  # Example dependencies
]

[tool.setuptools]
package-dir = {"" = "crypto_trader"}              # Falls deine Module im Ordner `src` liegen
packages = ["crypto_viewer"]            # Enthält explizit dein Paket
include-package-data = true             # Inkludiere zusätzliche Daten (z. B. aus `MANIFEST.in`)
